add a FIXME in page 97/210

--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -419,6 +419,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 如果可能的话, 我们建议构造一个程序来格式化表格, 实现一个像 \verb'tbl' 这样 
 复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
 方式在列中打印条目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
+% FIXME 这段翻译有问题
 都是相同的 (都等于该列宽度的最大值). 如果给定头部与输入文件
 \filename{countries}, 程序的输出是\footnote{\filename{countries} 原来没有
 头部, 需要手工加上 --- 译者注}:
