--- a/the_awk_language.tex
+++ b/the_awk_language.tex
@@ -1021,8 +1021,8 @@ Awk 不存在显式的拼接运算符. 如果 \textit{r}$_1$ 与 \textit{r}$_2$ 
         \verb'sin('\textit{x}\verb')'   & \textit{x} 的正弦值, \textit{x}
         以弧度为单位.   \\
         \verb'sqrt('\textit{x}\verb')'  & \textit{x} 的方根 \\
-        \verb'srand('\textit{x}\verb')' & \textit{x} 是 \verb'rand()' 新的
-        随机数种子  \\
+        \verb'srand('\textit{x}\verb')' & \textit{x} 是 \verb'rand()' 的
+        新的随机数种子  \\
         \hline
     \end{tabular}
 \end{center}
