--- a/preamble.tex
+++ b/preamble.tex
@@ -33,6 +33,8 @@
 \usepackage{mdframed}
 % 双栏排版
 \usepackage{multicol}
+% 表格单元格内换行
+\usepackage{makecell}
 
 % 脚注编号带圈
 \renewcommand\thefootnote{\ding{\numexpr171+\value{footnote}}}
