part of page 192/210

--- a/awk_summary.tex
+++ b/awk_summary.tex
@@ -401,3 +401,43 @@
 数值的限制与本地系统所能表示的数值范围有关, 比如某个机器所能表示的数值 
 范围是 $10^{-38}$ 到  $10^{38}$, 超过这个范围的数值只拥有字符串形式.
 \marginpar{192}
+\subsubsection{初始化, 比较和强制类型转换}
+每一个变量或字段, 在任意时刻都可能是字符串, 或数值, 或两者都是. 当变量
+通过赋值语句来获取一个值时:
+\begin{awkcode}
+    var = expr
+\end{awkcode}
+它的类型也会被设置成表达式的类型 (``赋值'' 包括 \texttt{+=}, \texttt{-=},
+等等). 算术表达式的类型是数值, 拼接是字符串, 以此类推. 如果赋值语句 
+只是一个简单的复制, 比如 \texttt{v1 = v2}, 那么 \texttt{v1} 就会被
+成 \texttt{v2} 的类型.
+
+比较时, 如果两个操作数的类型都是数值, 那么比较操作就会按照数值比较来进行.
+否则的话, 操作数被强制转换成字符串 (如果原来不是字符串), 此时比较操作
+就按照字符串比较来进行. 任意一个表达式都可以通过某些手段, 从而被强制
+转换成数值类型, 比如 
+\begin{awkcode}
+    expr + 0
+\end{awkcode}
+转换成字符串可以这样做 (也就是和空字符作拼接操作):
+\begin{awkcode}
+    expr ""
+\end{awkcode}
+字符串的数值形式的值, 指的是该字符串的数值前缀转化成数值后所得到的值.
+
+未初始化的变量的值是 数值0 或空字符串 \verb'""'. 因此, 如果 \texttt{x}
+没有被初始化过, 则条件判断
+\begin{awkcode}
+    if (x) ...
+\end{awkcode}
+就会失败, 同样, 下面这些条件判断:
+\begin{awkcode}
+    if (!x) ...
+    if (x == 0) ...
+    if (x == "") ...
+\end{awkcode}
+都会成功, 但是注意,
+\begin{awkcode}
+    if (x == "0") ...
+\end{awkcode}
+的比较结果为假.
