translate to page 192/210.
appendix_a, awk summary, completed.

--- a/awk_summary.tex
+++ b/awk_summary.tex
@@ -410,12 +410,12 @@
 它的类型也会被设置成表达式的类型 (``赋值'' 包括 \texttt{+=}, \texttt{-=},
 等等). 算术表达式的类型是数值, 拼接是字符串, 以此类推. 如果赋值语句 
 只是一个简单的复制, 比如 \texttt{v1 = v2}, 那么 \texttt{v1} 就会被
-成 \texttt{v2} 的类型.
+设置成 \texttt{v2} 的类型.
 
 比较时, 如果两个操作数的类型都是数值, 那么比较操作就会按照数值比较来进行.
 否则的话, 操作数被强制转换成字符串 (如果原来不是字符串), 此时比较操作
-就按照字符串比较来进行. 任意一个表达式都可以通过某些手段, 从而被强制
-转换成数值类型, 比如 
+就按照字符串比较来进行. 通过某些手段, 可以把任意一个表达式强制转换成数
+值类型, 比如 
 \begin{awkcode}
     expr + 0
 \end{awkcode}
@@ -423,7 +423,7 @@
 \begin{awkcode}
     expr ""
 \end{awkcode}
-字符串的数值形式的值, 指的是该字符串的数值前缀转化成数值后所得到的值.
+字符串的数值形式的值, 指的是该字符串的数值前缀转换成数值后所得到的值.
 
 未初始化的变量的值是 数值0 或空字符串 \verb'""'. 因此, 如果 \texttt{x}
 没有被初始化过, 则条件判断
@@ -436,8 +436,43 @@
     if (x == 0) ...
     if (x == "") ...
 \end{awkcode}
-都会成功, 但是注意,
+都会成功, 但是注意:
 \begin{awkcode}
     if (x == "0") ...
 \end{awkcode}
 的比较结果为假.
+
+如果可能的话, 字段的类型可以通过上下文环境来判断, 比如,
+\begin{awkcode}
+    $1++
+\end{awkcode}
+该表达式意味着: 如果有必要, 就把 \texttt{\$1} 强制转换成数值类型, 而
+\begin{awkcode}
+    $1 = $1 "," $2
+\end{awkcode}
+意味着: 如果有必要, 就把 \texttt{\$1} 和 \texttt{\$2} 的类型强制转换成
+字符串.
+
+如果无法根据上下文来判断变量的类型, 比如,
+\begin{awkcode}
+    if ($1 == $2) ...
+\end{awkcode}
+这时候就得根据输入数据来决定变量的类型. 所有字段的类型都是字符串, 但是,
+如果字段包含了一个机器可识别的数, 那么它也会被当作数值类型.
+
+显式为空的字段具有字符串值 \verb'""', 它们不是数值类型. 该结论也适用于
+不存在的字段 (也就是超出 \texttt{NF} 的部分) 和 空白行的 \texttt{\$0}.
+
+对字段成立的结论, 同样适用于由 \texttt{split} 创建的数组元素.
+
+当在表达式中提到一个不存在的变量时, 就会创建该变量, 其初始值是 0 和
+\texttt{""}. 因此, 如果元素 \texttt{arr[i]} 当前不存在, 语句:
+\begin{awkcode}
+    if (arr[i] == "") ...
+\end{awkcode}
+就会导致元素 \texttt{arr[i]} 被创建, 且初始值 为 \texttt{""}, 这就使得
+\texttt{if} 的条件判断结果为真. 测试语句
+\begin{awkcode}
+    if (i in arr) ...
+\end{awkcode}
+判断元素 \texttt{arr[i]} 是否存在, 但是不会带来创建新元素的副作用.
