--- a/awk_summary.tex
+++ b/awk_summary.tex
@@ -296,8 +296,9 @@
         \texttt{sqrt(}\textit{x}\texttt{)} \> 方根 \\
 
         \texttt{srand(}\textit{x}\texttt{)} \> 设置随机数种子, 如果省略
-        \textit{x}, 则默认使用
-        当天的时间 \footnote{原文是 uses time of day if no \textit{x} given}
+        \textit{x}, 则默认使用当天的时间
+        % FIXME: 该脚注无法在 PDF 中显示
+        % \footnote{原文是 uses time of day if no \textit{x} given}
     \end{tabbing}
 \end{quote}
 \subsubsection{表示式运算符 (按优先级递增排列)}
