part of page 182/210

--- a/epilog.tex
+++ b/epilog.tex
@@ -43,3 +43,33 @@ Awk 的快速传播强有力地推动了语言的发展. 把 awk 作为一门通
 情况是因为许多人在使用计算机时, 仅限于 shell (命令行语言) 和 awk, 而不
 是使用一门 ``真正'' 的编程语言来开发程序 --- 他们经常过度伸展他们所喜爱
 的工具.
+
+为变量的值同时维护两种表示形式: 字符串与数值, 根据上下文来选择合适的形式
+--- 这只是一个实验性设计, 目的是为了尽可能地使用同一套运算符集合来写出
+简短的程序, 在字符串与数值的界限很模糊的情况下, 程序也要能正确地工作.
+最终目标完成地很好, 但偶尔也会因为粗心而得到意料之外的运行结果. 第 
+\ref{chap:the_awk_language} 章中介绍的规则可以用来解决界限模糊的情况, 它
+们都来源于用户的使用经验.
+
+关联数组的灵感来源于 SNOBOL4 表格 (虽然它们不具备 SNOBOL4 表格的通用性).
+诞生 awk 的机器内存很小, 而且速度很慢, 正是这个环境造就了数组现在的性质.
+把下标类型限制为字符串是其中一种表现, 另外的限制还包括单维数组 (虽然套了
+一层语法外衣, 但本质上还是一维数组). 一个更加通用的实现应该支持多维数组,
+至少支持数组元素可以是另外一个数组.
+
+Awk 的主要设施在 1985 年被加入进来, 主要是为了满足用户需求. 添加的
+功能包括动态正则表达式, 新的内建变量与内建函数, 多输入流, 以最重要的用
+户自定义函数.
+
+\texttt{match}, 动态正则表达式和新的字符串替换函数提供了非常有用的功能,
+而且对用户来说, 只是稍微增加了一点复杂度.
+
+在 \texttt{getline} 被引入之前, 输入数据的唯一种类是 \patact 语句所隐含
+着的隐式输入循环. 这个限制条件确实太强了. 在原来的 awk 版本中, 对于具有
+多个输入数据源的程序 (比如套用信函生成程序) 来说, 必须通过设置一个标志变量
+(或其他类似的技巧) 来读取数据源. 而在新版的 awk 中, 多个输入数据可以在
+\texttt{BEGIN} 部分, 用 \texttt{getline} 来读取. 另一方面, \texttt{getline}
+是过载的, 它的语法和其他表达式相比并不一致. 其中一个问题是 \texttt{getline}
+需要返回它所读取到的数据, 但同时也会返回表示成功或失败的返回值.
+
+用户自定义函数的实现是一个折中方案, 
