--- a/awk.tex
+++ b/awk.tex
@@ -13,6 +13,7 @@
 \pdfbookmark[0]{目录}{contents}
 \tableofcontents
 
+\include{preface}
 \mainmatter
 \include{an_awk_tutorial}
 \include{the_awk_language}
