--- a/epilog.tex
+++ b/epilog.tex
@@ -43,14 +43,14 @@ Awk 的快速传播强有力地推动了语言的发展. 把 awk 作为一门通
 而且能够这么快速地流行起来, 我们都感到非常的惊喜, 当看到一个无法在
 一页内显示完毕的 awk 程序时, 我们的第一反应是震惊和惊异. 之所以会出现这种
 情况是因为许多人在使用计算机时, 仅限于 shell (命令行语言) 和 awk, 而不
-是使用一门 ``真正'' 的编程语言来开发程序 --- 他们经常过度伸展他们所喜爱
+是使用一门 ``真正'' 的编程语言来开发程序 --- 他们经常过度伸展所喜爱
 的工具.
 
 为变量的值同时维护两种表示形式: 字符串与数值, 根据上下文来选择合适的形式
 --- 这只是一个实验性设计, 目的是为了尽可能地使用同一套运算符集合来写出
 简短的程序, 在字符串与数值的界限很模糊的情况下, 程序也要能正确地工作.
 最终目标完成地很好, 但偶尔也会因为粗心而得到意料之外的运行结果. 第 
-\ref{chap:the_awk_language} 章中介绍的规则可以用来解决界限模糊的情况, 它
+\ref{chap:the_awk_language} 章介绍的规则可以用来解决界限模糊的情况, 它
 们都来源于用户的使用经验.
 
 关联数组的灵感来源于 SNOBOL4 表格 (虽然它们不具备 SNOBOL4 表格的通用性).
