--- a/reports_and_databases.tex
+++ b/reports_and_databases.tex
@@ -410,7 +410,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
     }
 \end{awkcode}
 \marginpar{97}
-如果把 \verb'form4' 的输出输送给 \verb'tbl', 输出的表格是:
+如果把 \verb'form4' 的输出输送给 \verb'tbl', 就可以得到下面这张表格:
 % awk -f prep3 pass=1 countries pass=2 countries | awk -f form4 |
 % tbl | troff | grops > out.ps
 \begin{center}
