part of page 184/210

--- a/epilog.tex
+++ b/epilog.tex
@@ -136,4 +136,24 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 用 C 程序 (在这里是 Unix 命令 \texttt{wc}) 对 10,000 行数据进行计数
 需要 1 秒钟的时间, 也就是每行 0.1 微秒.
 
+其他类似的测量表明字符串比较操作, 例如 \verb'$1=="xxx"' 所花费的时间,
+和正则表达式匹配 \verb'$1~/xxx/' 大致相同. 正则表达式匹配的时间开销
+基本上独立于表达式的复杂程度, 但是当一个复合比较表达式变得越来越复杂时,
+它的时间开销也会越来越高. 动态正则表达式的开销可以变得很高, 因为它
+可能需要为每一个测试重新构造识别对象.
 
+拼接多个字符串的代价比较昂贵:
+\begin{awkcode}
+    print $1 " " $2 " " $3 " " $4 " " $5
+\end{awkcode}
+所花费的时间大概是
+\begin{awkcode}
+    print $1, $2, $3, $4, $5
+\end{awkcode}
+的 2 倍.
+
+我们在前面说过, 数组的行为比较复杂. 只要数组中的元素不太多, 则访问一个元素
+的时间开销就是一定的. 在这之后, 随着元素个数的增加, 时间开销大致按照线性
+增长. 如果元素个数非常多, 这时候程序的性能也会受到操作系统的影响, 因为操作
+系统需要分配内存来存放变量. 因此, 相对于小数组, 在大数组中访问一个元素
+需要付出更高的代价. 如果你想在数组中存放一个大文件, 那就必须牢记这些.
