--- a/epilog.tex
+++ b/epilog.tex
@@ -157,3 +157,27 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 增长. 如果元素个数非常多, 这时候程序的性能也会受到操作系统的影响, 因为操作
 系统需要分配内存来存放变量. 因此, 相对于小数组, 在大数组中访问一个元素
 需要付出更高的代价. 如果你想在数组中存放一个大文件, 那就必须牢记这些.
+
+第 2 个手段是重新构造计算过程, 使得其中一些工作可以通过其他程序来完成.
+例如在整本书中, 为了避免自己写一个排序用的 awk 程序, 我们用了多次
+\texttt{sort} 命令. 如果你需要从一个很大的文件中分离出某些数据, 可以用
+\texttt{grep} 或 \texttt{egrep} 搜索数据, 然后再交由 awk 来处理.
+如果你需要做大量的替换操作 (比如第 \ref{chap:processing_words} 章的交
+叉引用程序), 那么可以选择一种流式编辑器 (比如 \texttt{sed}) 来完成这部分
+工作. 简单来说, 就是把一个大任务切分成多个小任务, 然后再针对每个小任务
+选择一个最合适的工具来处理.
+
+最后一个办法是用其他编程语言重写程序. 基本原则是把 awk 中比较有用的内建
+特性用子例程替换掉, 除此之外, 尽量让新程序和原程序在结构上保持一致.
+不要试图完全模仿 awk 的工作方式, 相反, 尽量充分利用手中已有的程序.
+\footnote{原文是 Instead provide just enough for the problem at hand.}
+比较有用的练习是写一个小型函数库, 函数库提供了字段分割, 关联数组,
+和正则表达式匹配, 在某些不支持动态字符串的语言中 (比如 C 语言), 你可能
+还需要一些能够方便地分配和释放字符串的子例程. 有了这些库函数, 把 awk 
+程序转换成其他更快的程序就方便多了.
+
+通过模式匹配, 字段分割, 关联数组等内建特性, awk 把其他传统语言很难完
+成的工作都简单化了. 利用这些特性, awk 程序虽然编写起来比较方便, 但是和%
+\marginpar{185}%
+认真编写过的等价的 C 程序相比, 在效率上会差一点. 一般来说, 效率并不会
+成为什么大问题, 所以 awk 既方便使用, 运行起来也足够快.
