part of page 185/210

--- a/epilog.tex
+++ b/epilog.tex
@@ -181,3 +181,11 @@ Awk 并没有内建的计时工具, 因此在本地环境中, 哪些操作属于
 \marginpar{185}%
 认真编写过的等价的 C 程序相比, 在效率上会差一点. 一般来说, 效率并不会
 成为什么大问题, 所以 awk 既方便使用, 运行起来也足够快.
+
+当 awk 的效率成为一个问题时, 就有必要测一下程序中各个部分的运行时间, 看
+看时间都花在了哪里. 虽然在不同的机器中, 相关操作的开销都会有所不同,
+但是测量技术可以应用在任何一台机器中. 最后, 即使使用底层语言来编写程序
+比较麻烦, 但是原理是相同的, 否则的话, 新程序不仅难以编写, 效率还很低.
+
+\section{结论}
+\label{sec:conclusion}
