--- a/epilog.tex
+++ b/epilog.tex
@@ -212,5 +212,15 @@ C 和 Pascal) 所具有的语法包袱, 所以 awk 学习起来非常简单, 它
 surprising number of people.}
 
 在 1985 年加入的特性, 尤其是自定义函数的支持, 催生出了许多未曾预料到的
-应用, 比如小型数据库系统和小型语言编译器. 在许多种情况下, awk 用来构造
-原型,
+应用, 比如小型数据库系统和小型语言编译器. 在许多种情况下, awk 只是用
+来构造原型, 测试想法的可行性, 以及对特性和用户接口进行评测, 即使如此,
+在某些情况下, awk 程序仍然可以被当作一件真正的产品来使用. Awk 甚至被用
+到了软件工程课程中, 因为和大型语言相比, 使用 awk 对设计进行实验可能会
+更加方便.
+
+当然, 我们要小心不能走得太远 --- 任何工具都有极限 --- 但是很多人已经
+发现, awk 是解决许多问题的有用工具, 我们希望本书所介绍的使用方法, 对
+读者来说同样有用.
+
+\marginpar{186}
+\subsection*{参考资料}
