--- a/README
+++ b/README
@@ -3,9 +3,8 @@ The AWK Programming Language (Aho, Kernighan, Weinberger 著, 中文名: AWK
 发邮件: wuzhouhui250@gmail.com
 
 翻译进度:
-        除了前言和结语, 剩下的部分都已经翻译完了, 当然错误是难免的, 如
-        果你在阅读的过程中发现了它们, 一定要记得告诉我 (Issue 或 Pull
-        Request).
+        除了前言, 剩下的部分都已经翻译完了, 当然错误是难免的, 如果你在阅
+        读的过程中发现了它们, 一定要记得告诉我 (Issue 或 Pull Request).
 
 文件清单:
         The_AWK_Programming_Language.djvu:      英文原版
