translate page iii/210

--- a/preface.tex
+++ b/preface.tex
@@ -1,3 +1,32 @@
 % vim: ts=8 sts=8 sw=4 et tw=75
 \chapter{前言}
 \label{chap:preface}
+
+\marginpar{iii}
+计算机用户经常把大量的时间花费在简单, 机械化的数据处理工作中 --- 改变
+数据格式, 验证数据的有效性, 搜索特定的数据项, 求和, 打印报表等. 这些
+工作完全可以自动化地完成, 但是如果每碰到一个这样的任务, 就用一门标准
+的编程语言 (比如 C 或 Pascal) 写一个专用的程序来解决它, 未免也太麻烦了.
+
+Awk 是一门特殊的编程语言, 它可以非常方便处理上面提到的任务, 经常只需要
+一两行便可搞定. 一个 awk 程序由一系列的模式和动作组成, 这些模式与动作
+说明了在输入中搜索哪些数据, 以及当符合条件的数据被找到时, 应该执行什么
+操作. Awk 在输入文件集合中 搜索与模式相匹配的输入行, 当找到一个匹配行时, 
+便会执行对应的动作. 通过字符串, 数值, 字段, 变量, 和数组元素的比较操作,
+再加上正则表达式, 利用这些组合, 一个模式可以用来选择输入行, 而动作可以
+对选中的行作任意的处理. 描述动作的语言看起来和 C 非常像, 但是它不需要
+声明, 并且字符串和数值都是内建的数据类型.
+
+Awk 自动地搜索输入文件, 并把每一个输入行切分成字段. 因为许多工作都是
+自动完成的 --- 包括输入, 字段分割, 存储管理, 初始化 --- 所以和传统语言
+编写的程序比起来, awk 程序会小得多. Awk 最常用的用途就是前面提到的
+那些工作. 因为 awk 程序一般都很短, 所以人们经常这样使用它: 通过键盘在
+命令行中输入程序代码 (只有一两行), 执行, 然后把代码丢弃. 实际上, awk 是
+一个通用编程工具, 许多专用工具都可以用它来替代.
+
+由于表达式和操作非常简便, 所以用 awk 来构造大型程序的原型就显得非常方便:
+先从简单的几行开始, 慢慢加以扩充, 测试不同的设计方案, 直到完成预期的目标.
+因为程序比较简短, 所以很容易上手, 如果在开发的过程中想到了一个更好的方案,
+修改起来 (甚至从头开始) 也没那么麻烦. 只要设计是正确的, 那么把 awk 程序
+翻译成其他语言也很方便.
+\marginpar{iv}
