--- a/preface.tex
+++ b/preface.tex
@@ -30,3 +30,53 @@ Awk 自动地搜索输入文件, 并把每一个输入行切分成字段. 因为
 修改起来 (甚至从头开始) 也没那么麻烦. 只要设计是正确的, 那么把 awk 程序
 翻译成其他语言也很方便.
 \marginpar{iv}
+
+\section*{本书组织}
+本书的第一目标是告诉你 awk 是什么, 以及如何高效地使用它. 第 
+\ref{chap:an_awk_tutorial} 章是一个快速入门教程, 读过几页之后, 读者应该就
+有了足够的知识来开始写一些有用的 awk 程序. 这一章中的例子非常简短, 它
+们都是 awk 的典型应用.
+
+第 \ref{chap:the_awk_language} 章对整个 awk 语言进行描述. 虽然这一章
+也包含了许多例子, 但是读起来就像手册一样枯燥, 所以你在第一次阅读本章
+时, 快速浏览即可.
+
+本书的剩下几章包含了相当丰富的例子, 这些例子主要用来展示 awk 的应用范围
+如何广泛, 以及如何高效地使用它. 其中一些示例比较常规, 另外一些虽然展示
+了某些编程思想, 但并没有非常实际的用途, 还有一小部分例子仅仅是因为
+它们比较有趣.
+
+第 \ref{chap:data_processing} 章的重点是检索, 转换, 归约和数据验证  ---
+这些任务本来就是当初开发 awk 的目标. 这一章还讨论了如何处理多行记录, 比如
+地址薄.
+
+Awk 是管理小型个人数据库的优秀工具. 第 \ref{chap:reports_and_databases}
+章讨论如何从数据库中生成报表, 以及如何为存储在多个文件中的数据, 
+构造一个简单的关系数据库系统和对应的查询语言.
+
+Awk 处理文本就像其他大多数语言处理数值一样方便, 所以它经常被应用在文本
+处理领域. 第 \ref{chap:processing_words} 章讨论如何使用 awk 来生成文本,
+以及协助文档的准备工作. 这一章包含了一个索引生成程序, 本书的索引就是用它
+的增强版生成的.
+
+第 \ref{chap:little_languages} 章关于 ``小型语言'', 小型语言指的是特定
+于某个领域的定制化语言. 使用 awk 编写翻译器非常方便, 因为它的基本操作
+支持大部分的词汇和表格管理工作. 这一章包含汇编程序, 绘图程序, 和
+几个计算器程序.
+
+Awk 还可以用来演示算法. 因为用 awk 写程序不需要声明, 也不用担心内存管理,
+所以它不仅具有伪代码的许多优点, 而且是可运行的. 第
+\ref{chap:experiments_with_algorithms} 讨论算法实验, 包括测试与性能
+评价. 算法包括几种排序算法, 最后以 Unix 程序 \texttt{make} 作为结束.
+
+第 \ref{chap:epilog} 章介绍 awk 的历史. 除此之外, 如果程序比较慢, 或者条
+件比较苛刻, 这一章还提出了几点建议.
+
+附录 \ref{chap:awk_summary} 总结了 awk 语言, 附录
+\ref{chap:answers_to_selected_exercises} 是部分习题的参考答案.
+
+读者应该从第 \ref{chap:an_awk_tutorial} 章开始阅读, 并尝试自己动手写
+程序. 快速浏览第 \ref{chap:the_awk_language} 章, 重点关注汇总和表格,
+不要陷入到细节当中. 然后根据自己的兴趣, 阅读后面的章节, 这些章节之间
+都是互相独立的, 所以不用在意阅读顺序.
+\marginpar{v}
