--- a/awk.tex
+++ b/awk.tex
@@ -24,9 +24,11 @@
 \include{experiments_with_algorithms}
 \include{epilog}
 
-\backmatter
+\appendix
 \include{awk_summary}
 \include{answers_to_selected_exercises}
+
+\backmatter
 \include{index}
 
 \end{document}
