--- a/preface.tex
+++ b/preface.tex
@@ -153,6 +153,8 @@ Kernighan, John Linderman, Bob Martin, Howard Moscovitz, Gerard Schmitt,
 Don Swartwout, Howard Trickey, Peter van Eijk, Chris Van Wyk, and Mihalis
 Yannakakis, 谢谢他们的帮助.
 
-Alfred V. Aho \par
+\begin{flushright}
+Alfred V. Aho\par
 Brian W. Kernighan \par
 Peter J. Weinberger
+\end{flushright}
