--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -419,11 +419,10 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 
 如果可能的话, 我们建议构造一个程序来格式化表格, 实现一个像 \verb'tbl' 这样 
 复杂的程序的确很有野心, 但不妨让我们从一个小程序开始: 这个程序以左对齐的
-方式在列中打印条目, 如果是数值, 则右对齐, 并且在同一列中, 每一行的列宽度
-% FIXME 这段翻译有问题
-都是相同的 (都等于该列宽度的最大值). 如果给定头部与输入文件
+方式在列中打印文本条目, 其列宽度为所在列的最大值; 如果是数值则右对齐, 但是 
+数值所占的域相对于本列最宽的项居中. 如果给定头部与输入文件
 \filename{countries}, 程序的输出是\footnote{\filename{countries} 原来没有
-头部, 需要手工加上 --- 译者注}:
+头部, 需事先加上 --- 译者注}:
 \begin{shell}
     COUNTRY   AREA   POPULATION   CONTINENT    
     USSR      8649       275      Asia         
