partial review of chapter four.

--- a/latex_src/reports_and_databases.tex
+++ b/latex_src/reports_and_databases.tex
@@ -11,8 +11,8 @@
 本章的第一部分讨论如何扫描单个文件来生成报表, 虽然控制报表的最终格式的
 确需要花点
 心思, 但是其实扫描步骤也是挺复杂的. 第二部分讨论如何从多个相关的文件中
-收集数据, 我们考虑用一种比较一般的方法来解决这个问题, 基本思想是把文件组
-看成是关系数据库, 这样做的好外是字段可以用名字来标识, 而不是数字.
+收集数据, 我们考虑用一种比较通用的方法来解决这个问题, 基本思想是把文件组
+看成是关系数据库, 这样做的好处是字段可以用名字来标识, 而不是数字.
 
 \section{报表生成}
 \label{sec:generating_reports}
@@ -21,7 +21,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 三步骤过程来生成报表: 准备, 排序, 格式化. 准备步骤包括选择数据, 可能的话
 还会对数据进行一些运算, 进而得到期望的信息; 如果我们想让数据按照某种特定
 的顺序排列, 就必须使用排序步骤, 排序操作可以通过将准备阶段的输出输送给系统
-的排序命令来完成; 格式化操作由第 2 个 awk 程序来完成, 它根据已排序的数据
+的排序命令来完成; 格式化操作由第 2 个 awk 程序完成, 它根据已排序的数据
 生成报表. 为了详细说明, 在这一节 我们利用第 \ref{chap:the_awk_language} 
 章的文件\filename{countries} 来生成几张报表.
 
@@ -101,7 +101,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 \begin{shell}
     awk -f prep1 countries | awk -f form1
 \end{shell}
-来得到.
+得到.
 
 \verb'prep1' 中 \verb'sort' 的参数非常古怪, 我们可以通过格式化输出, 使得
  \verb'sort' 不再需要任何参数, 然后再让格式化程序对行重新格式化即可.
@@ -136,7 +136,7 @@ Awk 可以从文件中挑选数据, 并将挑选到的数据格式化成报表. 
 \end{shell}
 格式 \verb'%-15s' 对大洲名来说已经足够宽了, \verb'%12.8f' 对人口密度的倒数
 来说, 覆盖范围也已足够. 最终的格式化程序类似于 \verb'form1', 但是忽略了第
-2 个字段. 为了简化排序程序的选项而特意制造一个排序键, 这种技巧非常常见,
+2 个字段. 为了简化排序程序的选项而特意制造一个排序键 --- 这种技巧非常常见,
 我们会在第 \ref{chap:processing_words} 章的索引程序中再次用到.
 \marginpar{92}
 
@@ -346,7 +346,7 @@ Report No. 3       POPULATION, AREA, POPULATION DENSITY         January 1, 1988
 完成, 但是为了打印出适当的行, 我们必须精心地计算字符并编写 \printf 语句,
 这种工作其实非常乏味, 尤其是其中的某些部分需要进行修改时.
 
-一种可选的方案是让某个程序去计算量的大小, 然后再根据你的需求对这些量
+一种可选的方案是让某个程序去计算量的大小, 然后再根据具体的需求对这些量
 的作用进行定位. 为打印程序写一个 awk 程序, 该程序
 对简单的表格进行格式化 --- 这是一种可行的做法, 我们待会儿再回来讨论.
 因为用的是 Unix 系统与排版程序, 所以我们可以用一些已经存在的工具 ---
@@ -989,9 +989,9 @@ table}), 只有在必要的时候才会构造导出表.
     sort capitals >temp.capitals
     join temp.countries temp.capitals >cc
 \end{shell}
-来生成.
+生成.
 
-一个 \texttt{relfile} 经常包含一张 \cterm{通用关系表} (\term{universal
+一个 \texttt{relfile} 经常包含一张 \cterm{全局关系表} (\term{universal
 relation}), 它是一张包含了所有属性的表, 是 \texttt{relfile} 的最后一张表,
 这种做法保证至少有一张表包含了属性的所有可能的组合, 表格 \texttt{cc}
 就是 数据库 countries-capitals 的通用关系表.
