--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -7,143 +7,154 @@
 
 \begin{multicols}{3}
 \small
-\hangindent=3pc \hangafter=1 \verb'&&' AND operator 10, 31, 37, 158
+\hangindent=3pc \hangafter=1 \verb'&&' AND operator (``与'' 运算符)10, 31, 37, 158
 
-\hangindent=3pc \hangafter=1 \verb'%=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'%=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'*=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'*=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'+=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'+=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'-=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'-=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'/=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'/=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'^=' assignment operator 38
+\hangindent=3pc \hangafter=1 \verb'^=' assignment operator (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 \verb'=' assignment operator 38, 44
+\hangindent=3pc \hangafter=1 \verb'=' assignment operator (赋值运算符) 38, 44
 
-\hangindent=3pc \hangafter=1 \verb'\' backslash 28, 30, 41, 43
+\hangindent=3pc \hangafter=1 \verb'\' backslash (反斜杆) 28, 30, 41, 43
 
-\hangindent=3pc \hangafter=1 \verb'{'...\verb'}' braces 15, 22, 47, 167, 188
+\hangindent=3pc \hangafter=1 \verb'{'...\verb'}' braces (花括号) 15, 22, 47, 167, 188
 
-\hangindent=3pc \hangafter=1 \verb'#' comment 15, 22, 188
+\hangindent=3pc \hangafter=1 \verb'#' comment (注释) 15, 22, 188
 
-\hangindent=3pc \hangafter=1 \verb'>' comparison operator 9
+\hangindent=3pc \hangafter=1 \verb'>' comparison operator (比较运算符) 9
 
-\hangindent=3pc \hangafter=1 \verb'>=' comparison operator 9
+\hangindent=3pc \hangafter=1 \verb'>=' comparison operator (比较运算符) 9
 
-\hangindent=3pc \hangafter=1 \verb'==' comparison operator 9, 44
+\hangindent=3pc \hangafter=1 \verb'==' comparison operator (比较运算符) 9, 44
 
-\hangindent=3pc \hangafter=1 \verb'?:' conditional expression 37, 68
+\hangindent=3pc \hangafter=1 \verb'?:' conditional expression (条件表达式) 37, 68
 
-\hangindent=3pc \hangafter=1 \verb',' continuation after 22, 188
+\hangindent=3pc \hangafter=1 \verb',' continuation after (继续) 22, 188
 
-\hangindent=3pc \hangafter=1 \verb'--' decrement operator 39, 70, 112
+\hangindent=3pc \hangafter=1 \verb'--' decrement operator (自减运算符) 39, 70, 112
 
-\hangindent=3pc \hangafter=1 \verb'^' exponentiation operator 15, 36, 46
+\hangindent=3pc \hangafter=1 \verb'^' exponentiation operator (指数运算符) 15, 36, 46
 
-\hangindent=3pc \hangafter=1 \verb'%' format conversion 42, 189
+\hangindent=3pc \hangafter=1 \verb'%' format conversion (格式转换) 42, 189
 
-\hangindent=3pc \hangafter=1 \verb'-' in character class 29
+\hangindent=3pc \hangafter=1 \verb'-' in character class (字符集中的
+\verb'-') 29
 
-\hangindent=3pc \hangafter=1 \verb'%%' in \verb'printf' 79
+\hangindent=3pc \hangafter=1 \verb'%%' in \verb'printf' (\verb'printf' 中的
+\verb'%%' 79
 
-\hangindent=3pc \hangafter=1 \verb'&' in substitution 43, 72, 189
+\hangindent=3pc \hangafter=1 \verb'&' in substitution (置换中的
+\verb'&') 43, 72, 189
 
-\hangindent=3pc \hangafter=1 \verb'++' increment operator 39, 146, 158
+\hangindent=3pc \hangafter=1 \verb'++' increment operator (自增运算符) 39, 146, 158
 
-\hangindent=3pc \hangafter=1 \verb'|' input pipe 62, 76
+\hangindent=3pc \hangafter=1 \verb'|' input pipe (输入管道) 62, 76
 
-\hangindent=3pc \hangafter=1 \verb'~' match operator 25, 27, 31, 37, 40
+\hangindent=3pc \hangafter=1 \verb'~' match operator (匹配运算符) 25, 27, 31, 37, 40
 
-\hangindent=3pc \hangafter=1 \verb'!~' nonmatch operator 25, 27, 31, 37, 40
+\hangindent=3pc \hangafter=1 \verb'!~' nonmatch operator (不匹配运算符) 25, 27, 31, 37, 40
 
-\hangindent=3pc \hangafter=1 \verb'!' NOT operator 10, 31, 37
+\hangindent=3pc \hangafter=1 \verb'!' NOT operator (``非'' 运算符) 10, 31, 37
 
-\hangindent=3pc \hangafter=1 \verb'||' OR operator 10, 31, 37
+\hangindent=3pc \hangafter=1 \verb'||' OR operator (``或'' 运算符) 10, 31, 37
 
-\hangindent=3pc \hangafter=1 \verb'>' output redirection 56, 58, 188
+\hangindent=3pc \hangafter=1 \verb'>' output redirection (输入重定向) 56, 58, 188
 
-\hangindent=3pc \hangafter=1 \verb'>>' output redirection 56, 58, 188
+\hangindent=3pc \hangafter=1 \verb'>>' output redirection (输入重定向) 56, 58, 188
 
-\hangindent=3pc \hangafter=1 \verb'|' output redirection 58, 188
+\hangindent=3pc \hangafter=1 \verb'|' output redirection (输入重定向) 58, 188
 
-\hangindent=3pc \hangafter=1 \verb"' '" quotes 2, 4-5, 65, 100
+\hangindent=3pc \hangafter=1 \verb"' '" quotes (\verb'单引号') 2, 4-5, 65, 100
 
-\hangindent=3pc \hangafter=1 \verb'.' regular expression 28
+\hangindent=3pc \hangafter=1 \verb'.' regular expression (正则表达式) 28
 
-\hangindent=3pc \hangafter=1 \verb'$' regular expression 28
+\hangindent=3pc \hangafter=1 \verb'$' regular expression (正则表达式) 28
 
-\hangindent=3pc \hangafter=1 \verb'^' regular expression 28
+\hangindent=3pc \hangafter=1 \verb'^' regular expression (正则表达式) 28
 
-\hangindent=3pc \hangafter=1 \verb'()' regular expression 29
+\hangindent=3pc \hangafter=1 \verb'()' regular expression (正则表达式) 29
 
-\hangindent=3pc \hangafter=1 \verb'['...\verb']' regular expression 29
+\hangindent=3pc \hangafter=1 \verb'['...\verb']' regular expression
+(正则表达式) 29
 
-\hangindent=3pc \hangafter=1 \verb'[^'...\verb']' regular expression 29
+\hangindent=3pc \hangafter=1 \verb'[^'...\verb']' regular expression
+(正则表达式) 29
 
-\hangindent=3pc \hangafter=1 \verb'|' regular expression 29, 32
+\hangindent=3pc \hangafter=1 \verb'|' regular expression (正则表达式) 29, 32
 
-\hangindent=3pc \hangafter=1 \verb'*' regular expression 30
+\hangindent=3pc \hangafter=1 \verb'*' regular expression (正则表达式) 30
 
-\hangindent=3pc \hangafter=1 \verb'+' regular expression 30
+\hangindent=3pc \hangafter=1 \verb'+' regular expression (正则表达式) 30
 
-\hangindent=3pc \hangafter=1 \verb'?' regular expression 30
+\hangindent=3pc \hangafter=1 \verb'?' regular expression (正则表达式) 30
 
-\hangindent=3pc \hangafter=1 \verb'%' remainder operator 36, 46
+\hangindent=3pc \hangafter=1 \verb'%' remainder operator (取余运算符) 36, 46
 
-\hangindent=3pc \hangafter=1 \verb'-' standard input filename 64, 116
+\hangindent=3pc \hangafter=1 \verb'-' standard input filename
+(标准输入的文件名) 64, 116
 
-\hangindent=3pc \hangafter=1 \verb'"'...\verb'"' string constant 7, 24, 35, 51
+\hangindent=3pc \hangafter=1 \verb'"'...\verb'"' string constant
+(字符串常量) 7, 24, 35, 51
 
-\hangindent=3pc \hangafter=1 \verb'_' underscore 35
+\hangindent=3pc \hangafter=1 \verb'_' underscore (下划线) 35
 
-\hangindent=3pc \hangafter=1 \verb'$0' at end of input 13
+\hangindent=3pc \hangafter=1 \verb'$0' at end of input (输入结束时的
+\verb'$0') 13
 
-\hangindent=3pc \hangafter=1 \verb'$0' blank line 192
+\hangindent=3pc \hangafter=1 \verb'$0' blank line (空行) 192
 
-\hangindent=3pc \hangafter=1 \verb'$0' record variable 5, 35
+\hangindent=3pc \hangafter=1 \verb'$0' record variable (记录变量) 5, 35
 
-\hangindent=3pc \hangafter=1 \verb'$0', side-effects on 36 43
+\hangindent=3pc \hangafter=1 \verb'$0', side-effects on (副作用) 36 43
 
-\hangindent=3pc \hangafter=1 \verb'\007' bell character 31
+\hangindent=3pc \hangafter=1 \verb'\007' bell character (响铃符) 31
 
-\hangindent=3pc \hangafter=1 \verb'\b' backspace character 31
+\hangindent=3pc \hangafter=1 \verb'\b' backspace character (退格符) 31
 
-\hangindent=3pc \hangafter=1 \verb'/dev/tty' file 59
+\hangindent=3pc \hangafter=1 \verb'/dev/tty' file (\verb'/dev/tty' 文件) 59
 
-\hangindent=3pc \hangafter=1 \verb'-f' option 4-5, 63, 65, 187
+\hangindent=3pc \hangafter=1 \verb'-f' option (\verb'-f' 选项) 4-5, 63, 65, 187
 
-\hangindent=3pc \hangafter=1 \verb'-F' option 60, 63, 187
+\hangindent=3pc \hangafter=1 \verb'-F' option (\verb'-F' 选项) 60, 63, 187
 
 \hangindent=3pc \hangafter=1 \verb'>'\textit{file}, \verb'print' 90, 188
 
-\hangindent=3pc \hangafter=1 \verb'#include' processor 62, 64
+\hangindent=3pc \hangafter=1 \verb'#include' processor (\verb'#include'
+预处理器) 62, 64
 
-\hangindent=3pc \hangafter=1 \verb'$'\textit{n} field 5, 35
+\hangindent=3pc \hangafter=1 \verb'$'\textit{n} field (\verb'$n'\textit{n}
+字段) 5, 35
 
-\hangindent=3pc \hangafter=1 \verb'\n' newline character 8, 31, 79
+\hangindent=3pc \hangafter=1 \verb'\n' newline character (换行符) 8, 31, 79
 
-\hangindent=3pc \hangafter=1 $\pi$, computation of 39
+\hangindent=3pc \hangafter=1 $\pi$, computation of (计算 $\pi$) 39
 
-\hangindent=3pc \hangafter=1 \verb'\t' tab character 15, 24, 31
+\hangindent=3pc \hangafter=1 \verb'\t' tab character (制表符) 15, 24, 31
 
-\hangindent=3pc \hangafter=1 \verb'$x++' versus \verb'$(x++)' 146
+\hangindent=3pc \hangafter=1 \verb'$x++' versus \verb'$(x++)' (\verb'$x++'
+与 \verb'$(x++)') 146
 
-\hangindent=3pc \hangafter=1 action, default 5, 9, 21, 187
+\hangindent=3pc \hangafter=1 action, default (默认动作) 5, 9, 21, 187
 
-\hangindent=3pc \hangafter=1 actions, summary of 34, 188
+\hangindent=3pc \hangafter=1 actions, summary of (动作的总结) 34, 188
 
-\hangindent=3pc \hangafter=1 add checks and deposits 87
+\hangindent=3pc \hangafter=1 add checks and deposits (累加支出与存款) 87
 
-\hangindent=3pc \hangafter=1 \verb'addcomma' program 72, 194
+\hangindent=3pc \hangafter=1 \verb'addcomma' program (程序 \verb'addcomma') 72, 194
 
-\hangindent=3pc \hangafter=1 address list 82
+\hangindent=3pc \hangafter=1 address list (地址列表) 82
 
-\hangindent=3pc \hangafter=1 address list, sorting 84
+\hangindent=3pc \hangafter=1 address list, sorting (排序地址列表) 84
 
-\hangindent=3pc \hangafter=1 aggregation 51, 58, 119
+\hangindent=3pc \hangafter=1 aggregation (聚合) 51, 58, 119
 
 \hangindent=3pc \hangafter=1 Aho, A. V. 130, 152, 179, 186
 
@@ -151,142 +162,151 @@
 
 \hangindent=3pc \hangafter=1 Akkerhuis, J. vi
 
-\hangindent=3pc \hangafter=1 algorithm, depth-first search 172, 177
+\hangindent=3pc \hangafter=1 algorithm, depth-first search (深度优先搜索) 172, 177
 
-\hangindent=3pc \hangafter=1 algorithm, heapsort 162
+\hangindent=3pc \hangafter=1 algorithm, heapsort (堆排序) 162
 
-\hangindent=3pc \hangafter=1 algorithm, insertion sort 153
+\hangindent=3pc \hangafter=1 algorithm, insertion sort (插入排序) 153
 
-\hangindent=3pc \hangafter=1 algorithm, linear 157, 183
+\hangindent=3pc \hangafter=1 algorithm, linear (线性算法) 157, 183
 
-\hangindent=3pc \hangafter=1 algorithm, \verb'make' update 176
+\hangindent=3pc \hangafter=1 algorithm, \verb'make' update (程序
+\verb'make') 176
 
-\hangindent=3pc \hangafter=1 algorithm, $n\log n$ 162, 165
+\hangindent=3pc \hangafter=1 algorithm, $n\log n$ (对数算法) 162, 165
 
-\hangindent=3pc \hangafter=1 algorithm, quadratic 157, 162, 183
+\hangindent=3pc \hangafter=1 algorithm, quadratic (平方算法) 157, 162, 183
 
-\hangindent=3pc \hangafter=1 algorithm, quicksort 160
+\hangindent=3pc \hangafter=1 algorithm, quicksort (快速排序) 160
 
-\hangindent=3pc \hangafter=1 algorithm, topological sort 171
+\hangindent=3pc \hangafter=1 algorithm, topological sort (拓扑排序) 171
 
-\hangindent=3pc \hangafter=1 AND operator, \verb'&&' 10, 31, 37, 158
+\hangindent=3pc \hangafter=1 AND operator, \verb'&&' (``与'' 运算符) 10, 31, 37, 158
 
-\hangindent=3pc \hangafter=1 \verb'ARGC' variable 36, 63, 189
+\hangindent=3pc \hangafter=1 \verb'ARGC' variable (变量 \verb'ARGC') 36, 63, 189
 
-\hangindent=3pc \hangafter=1 arguments, command-line 63
+\hangindent=3pc \hangafter=1 arguments, command-line (命令行参数) 63
 
-\hangindent=3pc \hangafter=1 arguments, function 54
+\hangindent=3pc \hangafter=1 arguments, function (函数参数) 54
 
-\hangindent=3pc \hangafter=1 \verb'ARGV', changing 64-65, 116
+\hangindent=3pc \hangafter=1 \verb'ARGV', changing (修改 \verb'ARGV') 64-65, 116
 
-\hangindent=3pc \hangafter=1 \verb'ARGV' variable 36, 63-65, 116, 189
+\hangindent=3pc \hangafter=1 \verb'ARGV' variable (变量 \verb'ARGV') 36, 63-65, 116, 189
 
-\hangindent=3pc \hangafter=1 \verb'arith' program 117
+\hangindent=3pc \hangafter=1 \verb'arith' program (程序 \verb'arith') 117
 
-\hangindent=3pc \hangafter=1 arithmetic expression grammar 145
+\hangindent=3pc \hangafter=1 arithmetic expression grammar (算法表达式语法) 145
 
-\hangindent=3pc \hangafter=1 arithmetic functions, summary of 190
+\hangindent=3pc \hangafter=1 arithmetic functions, summary of
+(算术表达式总结) 190
 
-\hangindent=3pc \hangafter=1 arithmetic functions, table of 39
+\hangindent=3pc \hangafter=1 arithmetic functions, table of
+(算术表达式表格) 39
 
-\hangindent=3pc \hangafter=1 arithmetic operator 36, 44
+\hangindent=3pc \hangafter=1 arithmetic operator (算术运算符) 36, 44
 
-\hangindent=3pc \hangafter=1 arithmetic operator, table of 46
+\hangindent=3pc \hangafter=1 arithmetic operator, table of (算术运算符表格) 46
 
-\hangindent=3pc \hangafter=1 array, associative 50-51, 193
+\hangindent=3pc \hangafter=1 array, associative 50-51, (关联数组) 193
 
-\hangindent=3pc \hangafter=1 array parameter 54
+\hangindent=3pc \hangafter=1 array parameter (数组参数) 54
 
-\hangindent=3pc \hangafter=1 array reference, cost of 184, 204
+\hangindent=3pc \hangafter=1 array reference, cost of (引用数组的开销) 184, 204
 
-\hangindent=3pc \hangafter=1 array subscripts 50-52
+\hangindent=3pc \hangafter=1 array subscripts (数组的下标) 50-52
 
-\hangindent=3pc \hangafter=1 arrays 16, 50
+\hangindent=3pc \hangafter=1 arrays (数组) 16, 50
 
-\hangindent=3pc \hangafter=1 arrays, multidimensional 52, 108, 114, 116, 182
+\hangindent=3pc \hangafter=1 arrays, multidimensional (多维数组) 52, 108, 114, 116, 182
 
-\hangindent=3pc \hangafter=1 \verb'asm' program 134, 203
+\hangindent=3pc \hangafter=1 \verb'asm' program (程序 \verb'asm') 134, 203
 
-\hangindent=3pc \hangafter=1 \verb'asplit' function 81
+\hangindent=3pc \hangafter=1 \verb'asplit' function (函数 \verb'asplit') 81
 
-\hangindent=3pc \hangafter=1 assembler instructions, table of 132
+\hangindent=3pc \hangafter=1 assembler instructions, table of
+(汇编程序的指令, 表格) 132
 
-\hangindent=3pc \hangafter=1 assembly language 133
+\hangindent=3pc \hangafter=1 assembly language (汇编语言) 133
 
-\hangindent=3pc \hangafter=1 assignment, command-line 63, 94, 187, 195, 197
+\hangindent=3pc \hangafter=1 assignment, command-line (在命令行赋值) 63, 94, 187, 195, 197
 
-\hangindent=3pc \hangafter=1 assignment expression 39, 127
+\hangindent=3pc \hangafter=1 assignment expression (赋值表达式) 39, 127
 
-\hangindent=3pc \hangafter=1 assignment, multiple 39
+\hangindent=3pc \hangafter=1 assignment, multiple (复合赋值) 39
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'%=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'%=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'*=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'*=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'+=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'+=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'-=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'-=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'/=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'/=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'^=' 38
+\hangindent=3pc \hangafter=1 assignment operator, \verb'^=' (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment operator, \verb'=' 38, 44
+\hangindent=3pc \hangafter=1 assignment operator, \verb'=' (赋值运算符) 38, 44
 
-\hangindent=3pc \hangafter=1 assignment operators 38
+\hangindent=3pc \hangafter=1 assignment operators (赋值运算符) 38
 
-\hangindent=3pc \hangafter=1 assignment, side-effects of 43
+\hangindent=3pc \hangafter=1 assignment, side-effects of (赋值的副作用) 43
 
-\hangindent=3pc \hangafter=1 associative array 50-51, 193
+\hangindent=3pc \hangafter=1 associative array (关联数组) 50-51, 193
 
-\hangindent=3pc \hangafter=1 associative of operators 46
+\hangindent=3pc \hangafter=1 associative of operators (运算符之间的关联) 46
 
-\hangindent=3pc \hangafter=1 \verb'atan2' function 39
+\hangindent=3pc \hangafter=1 \verb'atan2' function (函数 \verb'atan2') 39
 
-\hangindent=3pc \hangafter=1 attribute, database 103
+\hangindent=3pc \hangafter=1 attribute, database (数据库中的属性) 103
 
-\hangindent=3pc \hangafter=1 avoiding \verb'sort' options 91, 140
+\hangindent=3pc \hangafter=1 avoiding \verb'sort' options (避开 \verb'sort'
+的选项) 91, 140
 
-\hangindent=3pc \hangafter=1 awk command line 1, 3, 63, 65, 187
+\hangindent=3pc \hangafter=1 awk command line (awk 的命令行) 1, 3, 63, 65, 187
 
-\hangindent=3pc \hangafter=1 awk grammar 148
+\hangindent=3pc \hangafter=1 awk grammar (awk 的语法) 148
 
-\hangindent=3pc \hangafter=1 awk program, form of 2, 21, 187
+\hangindent=3pc \hangafter=1 awk program, form of (awk 程序的形式) 2, 21, 187
 
-\hangindent=3pc \hangafter=1 awk program, running an 3
+\hangindent=3pc \hangafter=1 awk program, running an (运行 awk 程序) 3
 
-\hangindent=3pc \hangafter=1 awk program, running time of 183
+\hangindent=3pc \hangafter=1 awk program, running time of (awk
+程序的运行时间) 183
 
-\hangindent=3pc \hangafter=1 \verb'awk.parser' program 149
+\hangindent=3pc \hangafter=1 \verb'awk.parser' program (程序
+\verb'awk.parser') 149
 
-\hangindent=3pc \hangafter=1 back edge 173-174
+\hangindent=3pc \hangafter=1 back edge (回边) 173-174
 
-\hangindent=3pc \hangafter=1 backslash, \verb'\' 28, 30, 41, 43
+\hangindent=3pc \hangafter=1 backslash, \verb'\' (反斜杆) 28, 30, 41, 43
 
-\hangindent=3pc \hangafter=1 backspace character, \verb'\b' 31
+\hangindent=3pc \hangafter=1 backspace character, \verb'\b' (退格符) 31
 
+% TODO "bailing out" 不知道该怎么翻译
 \hangindent=3pc \hangafter=1 bailing out 4
 
-\hangindent=3pc \hangafter=1 balanced delimiters 77, 195
+\hangindent=3pc \hangafter=1 balanced delimiters (均衡的分隔符) 77, 195
 
-\hangindent=3pc \hangafter=1 base table 106
+\hangindent=3pc \hangafter=1 base table (基表) 106
 
-\hangindent=3pc \hangafter=1 batch sort test program 155
+\hangindent=3pc \hangafter=1 batch sort test program (批处理的排序测试程序) 155
 
-\hangindent=3pc \hangafter=1 \verb'BEGIN' and \verb'END', multiple 23, 169
+\hangindent=3pc \hangafter=1 \verb'BEGIN' and \verb'END', multiple (多个的
+\verb'BEGIN' 与 \verb'END') 23, 169
 
-\hangindent=3pc \hangafter=1 \verb'BEGIN' pattern 11, 23, 63
+\hangindent=3pc \hangafter=1 \verb'BEGIN' pattern (模式 \verb'BEGIN') 11, 23, 63
 
-\hangindent=3pc \hangafter=1 bell character, \verb'\007' 31
+\hangindent=3pc \hangafter=1 bell character, \verb'\007' (响铃符) 31
 
 \hangindent=3pc \hangafter=1 Bentley, J. L. vi, 130, 152, 179
 % \hangindent=3pc \hangafter=1 \marginpar{206}
 
-\hangindent=3pc \hangafter=1 binary tree 163
+\hangindent=3pc \hangafter=1 binary tree (二叉树) 163
 
-\hangindent=3pc \hangafter=1 blank line, \verb'$0' 192
+\hangindent=3pc \hangafter=1 blank line, \verb'$0' (空行) 192
 
-\hangindent=3pc \hangafter=1 blank line, printing a 11, 55
+\hangindent=3pc \hangafter=1 blank line, printing a (打印一个空行) 11, 55
 
 \hangindent=3pc \hangafter=1 blank line separator 83
 
