这里的 password 是个普通单词, 不是文件的名字

--- a/latex_src/index.tex
+++ b/latex_src/index.tex
@@ -332,7 +332,7 @@
 
 \hangindent=3pc \hangafter=1 \verb'check' function 155
 
-\hangindent=3pc \hangafter=1 check \verb'password' file 78
+\hangindent=3pc \hangafter=1 check password file 78
 
 \hangindent=3pc \hangafter=1 \verb'check1' program 87
 
